mysql数据库操作不成功

--- a/myapp/views/index.jade
+++ b/myapp/views/index.jade
@@ -3,4 +3,4 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-  h1 我是赖传峰
+  h1 我是赖传峰,Welcome to my website.I use node and express build this application.And use pm2 to watch.
