--- a/myapp/views/layout.jade
+++ b/myapp/views/layout.jade
@@ -2,6 +2,11 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/semantic/dist/semantic.min.css')
   body
-    block content
+    div.ui.three.item.menu
+      a.active.item(href="/signup") 注册
+      a.item(href="/signin") 登录
+      a.item(href="/signout") 注销
+    div.ui.container
+      block content
