--- a/myapp/views/signin.jade
+++ b/myapp/views/signin.jade
@@ -10,7 +10,4 @@ block content
 				.field
 					label(for="password") 密码
 					input(type="text", name="password", placeholder="密码")
-				.field
-					label(for="password_again") 重复密码
-					input(type="text", name="password_again", placeholder="再次输入密码")
-				button.ui.fluid.button.blue(type="submit") 注册
+				button.ui.fluid.button.blue(type="submit") 登录
