--- a/myapp/views/index.jade
+++ b/myapp/views/index.jade
@@ -1,6 +1,5 @@
 extends layout
 
 block content
-  h1= title
   p Welcome to #{title}
-  h1 我是赖传峰,Welcome to my website.I use node and express build this application.And use pm2 to watch.
+  h1 欢迎来到程序师的Express页面
