--- a/myapp/views/signin.jade
+++ b/myapp/views/signin.jade
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-	div.ui.two.column.centered.grid
-		div.column
+	.ui.two.column.centered.grid
+		.column
 			form.ui.form(action="",method="post")
 				.field
 					label(for="username") 用户名
