--- a/myapp/views/signin.jade
+++ b/myapp/views/signin.jade
@@ -9,5 +9,5 @@ block content
 					input(type="text", name="username", placeholder="用户名")
 				.field
 					label(for="password") 密码
-					input(type="text", name="password", placeholder="密码")
+					input(type="password", name="password", placeholder="密码")
 				button.ui.fluid.button.blue(type="submit") 登录
