--- a/myapp/views/signup.jade
+++ b/myapp/views/signup.jade
@@ -9,8 +9,8 @@ block content
 					input(type="text", name="username", placeholder="用户名")
 				.field
 					label(for="password") 密码
-					input(type="text", name="password", placeholder="密码")
+					input(type="password", name="password", placeholder="密码")
 				.field
 					label(for="password_again") 重复密码
-					input(type="text", name="password_again", placeholder="再次输入密码")
+					input(type="password", name="password_again", placeholder="再次输入密码")
 				button.ui.fluid.button.blue(type="submit") 注册
