--- a/myapp/views/user/signin.jade
+++ b/myapp/views/user/signin.jade
@@ -1,16 +1,13 @@
-extends layout
+extends ../layout
 
 block content
 	.ui.two.column.centered.grid
 		.column
-			form.ui.form(action="",method="post")
+			form.ui.form(method="post")
 				.field
 					label(for="username") 用户名
 					input(type="text", name="username", placeholder="用户名")
 				.field
 					label(for="password") 密码
 					input(type="password", name="password", placeholder="密码")
-				.field
-					label(for="password_again") 重复密码
-					input(type="password", name="password_again", placeholder="再次输入密码")
-				button.ui.fluid.button.blue(type="submit") 注册
+				button.ui.fluid.button.blue(type="submit") 登录
