--- a/myapp/views/user/index.jade
+++ b/myapp/views/user/index.jade
@@ -1,4 +1,6 @@
 extends ../layout
 
 block content
-	p 个人的一些事务，个人中心
+	.ui.two.column.centered.grid
+		.column
+			a.ui.fluid.button.blue.basic(href="/user/password") 修改密码
