增加账户设定与个人资料

--- a/myapp/views/user/success.jade
+++ b/myapp/views/user/success.jade
@@ -5,7 +5,7 @@ block content
 		i.warning.icon
 		.content
 			if isLogin
-				.header 你已经成功登录,请勿重复登录
+				.header 你已经成功登录,请勿重复登入
 			else
-				.header 你已经成功登录,请进行后续操作
+				.header 你已经成功登入,请进行后续操作
 			
