--- a/myapp/views/layout.jade
+++ b/myapp/views/layout.jade
@@ -12,14 +12,15 @@ html(lang="zh-Hans")
     .ui.attached.stackable.secondary.pointing.menu
       .ui.container
         a.item(href="/",class={active:currentUrl==="/"}) 主页
-        a.item(href="/user/signin",class={active:currentUrl==="/signin"}) 登录
+        a.item(href="/user/signin",class={active:currentUrl==="/signin"}) 登入
         a.item(href="/user/signup",class={active:currentUrl==="/signup"}) 注册
-        a.item(href="/user/index",class={active:currentUrl==="/index"}) 个人中心
-        a.item(href="/user/signout") 注销
+        a.item(href="/user/account",class={active:currentUrl==="/account"}) 账户设定
+        a.item(href="/user/profile",class={active:currentUrl==="/profile"})  个人资料
         .right.item
           .ui.input.icon
             input(type="text",placeholder="回车搜索……")
             i.search.icon
+        a.item(href="/user/signout") 登出
   - if(message){
     .ui.message.container.floating
       i.close.icon
