--- a/myapp/views/layout.jade
+++ b/myapp/views/layout.jade
@@ -9,23 +9,22 @@ html(lang="zh-Hans")
     block script
       script(src="/requirejs/require.js",data-main="/javascripts/main.js")
   body
-    .ui.attached.stackable.secondary.pointing.menu
+    .ui.secondary.pointing.menu.grid
       .ui.container
         a.item(href="/",class={active:currentUrl==="/"}) 主页
         a.item(href="/user/signin",class={active:currentUrl==="/signin"}) 登入
         a.item(href="/user/signup",class={active:currentUrl==="/signup"}) 注册
-        a.item(href="/user/account",class={active:currentUrl==="/account"}) 账户设定
-        a.item(href="/user/profile",class={active:currentUrl==="/profile"})  个人资料
+        a.item(href="/user/profile",class={active:currentUrl==="/profile"})  个人中心
         .right.item
           .ui.input.icon
             input(type="text",placeholder="回车搜索……")
             i.search.icon
         a.item(href="/user/signout") 登出
   - if(message){
-    .ui.message.container.floating
+    .ui.message.container.floating.grid
       i.close.icon
       .header=message
   - }
-    .ui.container.segment.raised.very
-      .ui.large.header.dividing=title
+    .ui.container.grid
+      //.ui.large.header.dividing=title
       block content
