--- a/myapp/views/user/profile.jade
+++ b/myapp/views/user/profile.jade
@@ -1,16 +1,15 @@
-extends ../layout
+extends setting-layout
 
-block content
-	.ui.two.column.centered.grid
-		.column
-			form.ui.form(method="post")
-				.field
-					label(for="old_password") 旧密码
-					input(type="password", name="old_password", placeholder="旧密码")
-				.field
-					label(for="password") 新密码
-					input(type="password", name="old_password", placeholder="长度至少六位")
-				.field
-					label(for="password_again") 重复密码
-					input(type="password", name="old_password", placeholder="再次输入新密码")
-				button.ui.fluid.button.blue(type="submit") 修改密码
+block side_content
+	.ui.segment.column
+		form.ui.form(method="post")
+			.field
+				label(for="old_password") 旧密码
+				input(type="password", name="old_password", placeholder="旧密码")
+			.field
+				label(for="password") 新密码
+				input(type="password", name="old_password", placeholder="长度至少六位")
+			.field
+				label(for="password_again") 重复密码
+				input(type="password", name="old_password", placeholder="再次输入新密码")
+			button.ui.fluid.button.blue(type="submit") 修改密码
