--- a/myapp/views/setting/account.jade
+++ b/myapp/views/setting/account.jade
@@ -2,14 +2,14 @@ extends layout
 
 block side_content
 	.ui.segment.column
-		form.ui.form(method="post")
+		form.ui.form(method="post",id="update_password")
 			.field
 				label(for="old_password") 旧密码
-				input(type="password", name="old_password", placeholder="旧密码")
+				input(type="password", name="old_password", placeholder="6到15位，包含数字和字母")
 			.field
 				label(for="password") 新密码
-				input(type="password", name="old_password", placeholder="长度至少六位")
+				input(type="password", name="password", placeholder="新密码和当前密码不能相同")
 			.field
-				label(for="password_again") 重复密码
-				input(type="password", name="old_password", placeholder="再次输入新密码")
-			button.ui.fluid.button.blue(type="submit") 修改密码
+				label(for="password_again") 确认密码
+				input(type="password", name="password_again", placeholder="确认密码和新密码保持一致")
+			button.ui.fluid.button.blue(type="button",id="btn_update") 更新密码
