--- a/myapp/views/setting/layout.jade
+++ b/myapp/views/setting/layout.jade
@@ -2,8 +2,8 @@ extends ../layout
 block content
 	.four.wide.column
 		.ui.vertical.pointing.menu.right.floated
-			a.item(href="/profile",class={active:subMenu==="/profile"}) 个人资料
-			a.item(href="/account",class={active:subMenu==="/account"}) 账户设定
+			a.item(href="/setting/profile",class={active:subMenu==="/profile"}) 个人资料
+			a.item(href="/setting/account",class={active:subMenu==="/account"}) 账户设定
 			a.item(href="#") 通知中心
 	.eleven.wide.column
 		block side_content
